--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-items">
-                <a class="nav-link text-white" href="cards.html">Home</a>
+                <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-items">
                 <a class="nav-link active" href="aboutus.html">AboutUs</a>
