--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link text-white" href="">Home</a>
         </li>
         <li class="nav-items">
-            <a class="nav-link" href="aboutus.html">AboutUs</a>
+            <a class="nav-link" href="about.html">AboutUs</a>
         </li>
         <li class="nav-items">
             <a class="nav-link" href="">ContactUs</a>
